--- a/.classpath
+++ b/.classpath
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="profile-app/src/java"/>
-	<classpathentry kind="src" path="profile-component-shared/src/java"/>
-	<classpathentry kind="src" path="profile-api/src/java"/>
-	<classpathentry kind="src" path="profile-app/src/webapp/WEB-INF"/>
+	<classpathentry excluding="**/.DS_Store" kind="src" path="profile-app/src/java"/>
+	<classpathentry kind="src" path="common-composite-component-data/src/java"/>
+	<classpathentry kind="src" path="common-composite-component/src/java"/>
+	<classpathentry kind="src" path="type-api/src/java"/>
+	<classpathentry kind="src" path="manager-api/src/java"/>
+	<classpathentry kind="src" path="edu-person-api/src/java"/>
+	<classpathentry excluding="**/.DS_Store" kind="src" path="profile-component-shared/src/java"/>
+	<classpathentry excluding="**/.DS_Store" kind="src" path="profile-api/src/java"/>
+	<classpathentry excluding="**/.DS_Store" kind="src" path="profile-app/src/webapp/WEB-INF"/>
 	<classpathentry kind="var" path="MAVEN_REPO/jsf/jars/jsf-api-1.1.01.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/jsf/jars/jsf-impl-1.1.01.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/jspapi/jars/jsp-api-2.0-20040521.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/jspapi/jars/jsp-api-2.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="/common"/>
-	<classpathentry kind="src" path="/legacy-service"/>
-	<classpathentry kind="src" path="/kernel"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-logging/jars/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="src" path="/util"/>
-	<classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.4-20040521.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/high-util"/>
+	<classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/component-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/site-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/util"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tool-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/entity-api"/>
+	<classpathentry kind="var" path="MAVEN_REPO/hibernate/jars/hibernate-2.1.8.jar"/>
+	<classpathentry sourcepath="/JAVA_DIR/spring-framework-1.2.7" kind="var" path="MAVEN_REPO/springframework/jars/spring-1.2.6.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/commons-beanutils/jars/commons-beanutils-1.7.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
