--- a/common-composite-component/src/java/defaultJdbc.properties
+++ b/common-composite-component/src/java/defaultJdbc.properties
@@ -3,4 +3,4 @@ jdbc.driverClassName=org.hsqldb.jdbcDriver
 jdbc.url=jdbc:hsqldb:.
 jdbc.username=sa
 jdbc.password=
-hibernate.dialect=net.sf.hibernate.dialect.HSQLDialect
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
