--- a/profile-app/src/webapp/WEB-INF/web.xml
+++ b/profile-app/src/webapp/WEB-INF/web.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" 
-  "http://java.sun.com/dtd/web-app_2_3.dtd">
-<web-app>
+<!-- Changed spec level to 2.4 PAFH 8/30/2006 -->
+<web-app id="WebApp_9" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+
     <display-name>sakai-profile</display-name>
     <description>Sakai Profile</description>
     <context-param>
@@ -9,17 +11,19 @@
         <param-value>server</param-value>
     </context-param>
     <context-param>
-        <param-name>com.sun.faces.validateXml</param-name>
-        <param-value>true</param-value>
+	 <!-- Ordering changed to meet DTD - PAFH 8/30/2006 -->
         <description> Set this flag to true if you want the JavaServer Faces Reference Implementation to validate the
             XML in your faces-config.xml resources against the DTD. Default value is false. </description>
+        <param-name>com.sun.faces.validateXml</param-name>
+        <param-value>true</param-value>
     </context-param>
     <context-param>
-        <param-name>com.sun.faces.verifyObjects</param-name>
-        <param-value>true</param-value>
+ 	 <!-- Ordering changed to meet DTD - PAFH 8/30/2006 -->
         <description> Set this flag to true if you want the JavaServer Faces Reference Implementation to verify that all
             of the application objects you have configured (components, converters, renderers, and validators) can be
             successfully created. Default value is false. </description>
+        <param-name>com.sun.faces.verifyObjects</param-name>
+        <param-value>true</param-value>
     </context-param>
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -68,9 +72,10 @@
     <!--Profile image rendering servlet -->
   
   <servlet>
-    <servlet-name>ProfileImageServlet</servlet-name>
-    <display-name>Profile Image Rendering Servlet</display-name>
+  <!-- Ordering changed to meet DTD - PAFH 8/30/2006 -->
     <description>Profile Image Rendering Servlet</description>
+    <display-name>Profile Image Rendering Servlet</display-name>
+    <servlet-name>ProfileImageServlet</servlet-name>
     <servlet-class>org.sakaiproject.tool.profile.ProfileImageServlet</servlet-class>
       <load-on-startup> 2 </load-on-startup>
   </servlet>
