--- a/common-components/pom.xml
+++ b/common-components/pom.xml
@@ -33,10 +33,15 @@
       <version>1.3.4</version>
     </dependency>
     <dependency>
-      
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
       <version>1.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.0.4</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
