--- a/.classpath
+++ b/.classpath
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="**/.DS_Store" kind="src" path="profile-app/src/java"/>
-	<classpathentry kind="src" path="common-composite-component-data/src/java"/>
-	<classpathentry kind="src" path="common-composite-component/src/java"/>
-	<classpathentry kind="src" path="type-api/src/java"/>
-	<classpathentry kind="src" path="manager-api/src/java"/>
-	<classpathentry kind="src" path="edu-person-api/src/java"/>
-	<classpathentry excluding="**/.DS_Store" kind="src" path="profile-component-shared/src/java"/>
-	<classpathentry excluding="**/.DS_Store" kind="src" path="profile-api/src/java"/>
-	<classpathentry excluding="**/.DS_Store" kind="src" path="profile-app/src/webapp/WEB-INF"/>
-	<classpathentry kind="var" path="MAVEN_REPO/jsf/jars/jsf-api-1.1.01.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/jsf/jars/jsf-impl-1.1.01.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/jspapi/jars/jsp-api-2.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="MAVEN_REPO/commons-logging/jars/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.4.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/component-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/site-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/tool-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/entity-api"/>
-	<classpathentry kind="var" path="MAVEN_REPO/org.hibernate/jars/hibernate-3.1.3.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/org.springframework/jars/spring-2.0.6.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/commons-beanutils/jars/commons-beanutils-1.7.0.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/util-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/util-util"/>
-	<classpathentry kind="output" path="bin"/>
+  <classpathentry excluding="**/.DS_Store" kind="src" path="profile-app/src/java"/>
+  <classpathentry kind="src" path="common-composite-component-data/src/java"/>
+  <classpathentry kind="src" path="common-composite-component/src/java"/>
+  <classpathentry kind="src" path="type-api/src/java"/>
+  <classpathentry kind="src" path="manager-api/src/java"/>
+  <classpathentry kind="src" path="edu-person-api/src/java"/>
+  <classpathentry excluding="**/.DS_Store" kind="src" path="profile-component-shared/src/java"/>
+  <classpathentry excluding="**/.DS_Store" kind="src" path="profile-api/src/java"/>
+  <classpathentry excluding="**/.DS_Store" kind="src" path="profile-app/src/webapp/WEB-INF"/>
+  <classpathentry kind="var" path="M2_REPO/jsf/jsf-api/1.1.01/jsf-api-1.1.01.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jsf/jsf-impl/1.1.01/jsf-impl-1.1.01.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/servlet/jsp-api/2.0/jsp-api-2.0.jar"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.4/servlet-api-2.4.jar"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/component-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/site-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/tool-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/entity-api"/>
+  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.1.3/hibernate-3.1.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.0.6/spring-2.0.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.7.0/commons-beanutils-1.7.0.jar"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/util-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/util-util"/>
+  <classpathentry kind="output" path="bin"/>
 </classpath>
