--- a/.classpath
+++ b/.classpath
@@ -21,7 +21,7 @@
   <classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
   <classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
   <classpathentry combineaccessrules="false" kind="src" path="/entity-api"/>
-  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.1.3/hibernate-3.1.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate/3.2.5.ga/hibernate-3.2.5.ga.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/spring/2.0.6/spring-2.0.6.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.7.0/commons-beanutils-1.7.0.jar"/>
   <classpathentry combineaccessrules="false" kind="src" path="/util-api"/>
