http://jira.sakaiproject.org/jira/browse/SAK-12232 Missing svn connections
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@38366 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,14 @@
   <groupId>org.sakaiproject</groupId>
   <artifactId>profile-base</artifactId>
   <packaging>pom</packaging>
+  
+  <scm>
+    <connection>scm:svn:https://source.sakaiproject.org/svn/profile/trunk</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/trunk</developerConnection>
+    <url>https://source.sakaiproject.org/svn/profile/trunk</url>
+  </scm>
+  
+
   <modules>
     <module>common-components</module>
     <module>common-composite-component</module>
