--- a/profile-app/pom.xml
+++ b/profile-app/pom.xml
@@ -86,6 +86,16 @@
       <artifactId>commons-logging</artifactId>
       <version>1.0.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.sakaiproject</groupId>
+      <artifactId>sakai-content-api</artifactId>
+      <version>${sakai.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>${sakai.commons.fileupload.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <resources>
