--- a/edu-person-api/pom.xml
+++ b/edu-person-api/pom.xml
@@ -30,6 +30,12 @@
       <artifactId>sakai-common-type-api</artifactId>
       <version>${sakai.version}</version>
     </dependency>
+    <dependency>
+    <groupId>org.sakaiproject.entitybroker</groupId>
+    <artifactId>entitybroker-api</artifactId>
+    <version>1.3.0</version>
+    <scope>provided</scope>
+</dependency>
   </dependencies>
   <build>
     <resources/>
