--- a/common-composite-component/pom.xml
+++ b/common-composite-component/pom.xml
@@ -84,7 +84,7 @@
     <dependency>
     	<groupId>org.sakaiproject.entitybroker</groupId>
     	<artifactId>entitybroker-api</artifactId>
-    	<version>1.3.3</version>
+    	<version>1.3.3-SNAPSHOT</version>
     	<scope>provided</scope>
     </dependency>
     <dependency>
