K1 Integration Commit. Integrated Kernel 1 into Core and replaces core source tree with maven repo downloads
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@49729 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/common-composite-component-data/pom.xml
+++ b/common-composite-component-data/pom.xml
@@ -20,6 +20,10 @@
     <deploy.target>shared</deploy.target>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>org.sakaiproject.kernel</groupId>
+      <artifactId>sakai-component-manager</artifactId>
+    </dependency>
 <!--  compile time dependencies -->
     <dependency>
       <groupId>org.sakaiproject</groupId>
@@ -36,11 +40,7 @@
       <artifactId>sakai-common-type-api</artifactId>
       <version>${sakai.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-component-api</artifactId>
-      <version>${sakai.version}</version>
-    </dependency>
+<!--org.sakaiprojectsakai-component-api${sakai.version}-->
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
