SAK-14121 replace spring, serletet-api, hibernate and ehcahce dependencies
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@50040 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/common-composite-component-data/pom.xml
+++ b/common-composite-component-data/pom.xml
@@ -21,6 +21,10 @@
   </properties>
   <dependencies>
     <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.sakaiproject.kernel</groupId>
       <artifactId>sakai-component-manager</artifactId>
     </dependency>
@@ -46,11 +50,7 @@
       <artifactId>commons-logging</artifactId>
       <version>1.0.4</version>
     </dependency>
-    <dependency>
-      <groupId>${sakai.hibernate.groupId}</groupId>
-      <artifactId>${sakai.hibernate.artifactId}</artifactId>
-      <version>${sakai.hibernate.version}</version>
-    </dependency>
+<!--${sakai.hibernate.groupId}${sakai.hibernate.artifactId}${sakai.hibernate.version}-->
   </dependencies>
   <build>
     <resources>
