SAK-14122 remove $sakai.version tags
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@50801 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,19 @@
     <module>profile-component-shared</module>
     <module>type-api</module>
   </modules>
+<dependencyManagement>
+ <dependencies>
+    <dependency>
+      <groupId>org.sakaiproject</groupId>
+      <artifactId>sakai-common-composite-component</artifactId>
+      <version>2.6.0RC1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.sakaiproject</groupId>
+      <artifactId>sakai-jsf-sun-ri-tool</artifactId>
+       <version>2.6.0RC1-SNAPSHOT</version>
+      <type>pom</type>
+    </dependency>
+</dependencies>
+</dependencyManagement>
 </project>
