--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,7 @@
     <module>type-api</module>
   </modules>
   -->
-  
-  
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -48,9 +47,9 @@
         <version>2.7.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-jsf-sun-ri-tool</artifactId>
-        <version>2.7.0-SNAPSHOT</version>
+        <groupId>org.sakaiproject.jsf</groupId>
+        <artifactId>jsf-tool-sun</artifactId>
+        <version>${sakai.jsf.version}</version>
         <type>pom</type>
       </dependency>
     </dependencies>
