SAK-17432 update, hopefully for the last time.
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@69156 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-api/.project
+++ b/profile-api/.project
@@ -1,9 +1,7 @@
 <projectDescription>
   <name>sakai-profile-api</name>
   <comment/>
-  <projects>
-    <project>sakai-common-edu-person-api</project>
-  </projects>
+  <projects/>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
