--- a/profile-api/pom.xml
+++ b/profile-api/pom.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>profile-base</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.sakaiproject.profile</groupId>
+        <artifactId>profile</artifactId>
+        <version>2.7-SNAPSHOT</version>
+    </parent>
+
+    <name>Sakai Profile Service</name>
     <groupId>org.sakaiproject</groupId>
-    <version>2.7-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <name>Sakai Profile Service</name>
-  <groupId>org.sakaiproject</groupId>
-  <artifactId>sakai-profile-api</artifactId>
-  <organization>
-    <name>Sakai Project</name>
-    <url>http://sakaiproject.org/</url>
-  </organization>
-  <inceptionYear>2004</inceptionYear>
-  <packaging>jar</packaging>
-  <properties>
-    <deploy.target>shared</deploy.target>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.sakaiproject.common</groupId>
-      <artifactId>sakai-common-edu-person-api</artifactId>
-    </dependency>
-  </dependencies>
-  <build>
-    <resources/>
-  </build>
+    <artifactId>sakai-profile-api</artifactId>
+    <organization>
+        <name>Sakai Project</name>
+        <url>http://sakaiproject.org/</url>
+    </organization>
+    <inceptionYear>2004</inceptionYear>
+    <packaging>jar</packaging>
+    <properties>
+        <deploy.target>shared</deploy.target>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.sakaiproject.common</groupId>
+            <artifactId>sakai-common-edu-person-api</artifactId>
+        </dependency>
+    </dependencies>
+    <build>
+        <resources />
+    </build>
 </project>
