SAK-17593 update <groupId>, <artifactId>.
git-svn-id: https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x@69894 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-api/pom.xml
+++ b/profile-api/pom.xml
@@ -9,8 +9,8 @@
     </parent>
 
     <name>Sakai Profile Service</name>
-    <groupId>org.sakaiproject</groupId>
-    <artifactId>sakai-profile-api</artifactId>
+    <groupId>org.sakaiproject.profile</groupId>
+    <artifactId>profile-api</artifactId>
     <organization>
         <name>Sakai Project</name>
         <url>http://sakaiproject.org/</url>
