SAK-17593 update <artifactId>
git-svn-id: https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x@69933 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-component/pom.xml
+++ b/profile-component/pom.xml
@@ -8,9 +8,9 @@
         <version>2.7-SNAPSHOT</version>
     </parent>
 
-    <name>Sakai Profile Components Package (profile-components)</name>
+    <name>Sakai Profile Components Package (profile-component)</name>
     <groupId>org.sakaiproject.profile</groupId>
-    <artifactId>profile-components</artifactId>
+    <artifactId>profile-component</artifactId>
     <organization>
         <name>Sakai Project</name>
         <url>http://sakaiproject.org/</url>
