--- a/pom.xml
+++ b/pom.xml
@@ -1,57 +1,151 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>base</artifactId>
-    <groupId>org.sakaiproject</groupId>
-    <version>2.8-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <name>Sakai Profile Project</name>
-  <groupId>org.sakaiproject</groupId>
-  <artifactId>profile-base</artifactId>
-  <packaging>pom</packaging>
-  <scm>
-    <connection>scm:svn:https://source.sakaiproject.org/svn/profile/trunk</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/trunk</developerConnection>
-    <url>https://source.sakaiproject.org/svn/profile/trunk</url>
-  </scm>
-  
-  <modules>
-    <module>components</module>
-    <module>profile-api</module>
-    <module>profile-app</module>
-    <module>profile-component-shared</module>
-  </modules>
-  
-  <!--
-  <modules>
-    <module>common-components</module>
-    <module>common-composite-component</module>
-    <module>common-composite-component-data</module>
-    <module>components</module>
-    <module>edu-person-api</module>
-    <module>manager-api</module>
-    <module>profile-api</module>
-    <module>profile-app</module>
-    <module>profile-component-shared</module>
-    <module>type-api</module>
-  </modules>
-  -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.sakaiproject.common</groupId>
-        <artifactId>sakai-common-composite-component</artifactId>
-        <version>${sakai.common.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.jsf</groupId>
-        <artifactId>jsf-tool-sun</artifactId>
-        <version>${sakai.jsf.version}</version>
-        <type>pom</type>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+    <parent>
+        <groupId>org.sakaiproject.purepoms</groupId>
+        <artifactId>sakai-commons-tool</artifactId>
+        <version>2.7.0-build05-SNAPSHOT</version>
+    </parent>
+
+    <name>Sakai Profile Project</name>
+    <groupId>org.sakaiproject.profile</groupId>
+    <artifactId>profile</artifactId>
+    <version>2.8-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>profile-api</module>
+        <module>profile-app</module>
+        <module>profile-assembly</module>
+        <module>profile-component</module>
+        <module>profile-component-shared</module>
+    </modules>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>maven2-central-repo</id>
+            <name>Maven2 Central Repo</name>
+            <url>http://repo1.maven.org/maven2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>Sakai Plugin Repo</id>
+            <url>http://source.sakaiproject.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <repositories>
+        <repository>
+            <id>sakai-maven2</id>
+            <name>Sakai Maven Repository</name>
+            <layout>default</layout>
+            <url>http://source.sakaiproject.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>sakai-maven2-snapshots</id>
+            <name>Sakai Maven Repo Snapshots</name>
+            <layout>default</layout>
+            <url>http://source.sakaiproject.org/maven2-snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>default</id>
+            <name>Maven Repository Switchboard</name>
+            <layout>default</layout>
+            <url>http://repo1.maven.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <scm>
+        <connection>scm:svn:https://source.sakaiproject.org/svn/profile/trunk/</connection>
+        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/profile/trunk</developerConnection>
+        <url>https://source.sakaiproject.org/svn/profile/trunk/</url>
+    </scm>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>profile-api</artifactId>
+                <version>${project.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.sakaiproject.jsf</groupId>
+                <artifactId>jsf-tool-sun</artifactId>
+                <version>2.8-SNAPSHOT</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>commons-logging</groupId>
+                <artifactId>commons-logging</artifactId>
+                <version>1.0.4</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <reportSets>
+                    <reportSet>
+                        <id>aggregate</id>
+                        <configuration>
+                            <aggregate>true</aggregate>
+                            <source>1.5</source>
+                            <encoding>UTF-8</encoding>
+                            <links>
+                                <link>http://java.sun.com/j2se/1.5.0/docs/api
+                                </link>
+                                <link>http://java.sun.com/products/servlet/2.3/javadoc/
+                                </link>
+                            </links>
+                            <breakiterator>true</breakiterator>
+                            <verbose>false</verbose>
+                            <maxmemory>512m</maxmemory>
+                            <additionalJOption>
+                                -J-Xms168m -J-Xmx512m
+                                -J-XX:PermSize=128m -J-XX:NewSize=64m
+                            </additionalJOption>
+                        </configuration>
+                        <reports>
+                            <report>aggregate</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
