SAK-18627 Relocate profile help to its own tool project
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@78352 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>profile-api</module>
         <module>profile-app</module>
+        <module>profile-help</module>
         <module>profile-assembly</module>
         <module>profile-component</module>
         <module>profile-component-shared</module>
