--- a/profile-assembly/pom.xml
+++ b/profile-assembly/pom.xml
@@ -22,6 +22,12 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>profile-help</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>profile-component</artifactId>
             <version>${project.version}</version>
             <type>war</type>
