SAK-18627 Add profile-help to profile pom
git-svn-id: https://source.sakaiproject.org/svn/profile/branches/sakai_2-6-x@78380 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>manager-api</module>
     <module>profile-api</module>
     <module>profile-app</module>
+    <module>profile-help</module>
     <module>profile-component-shared</module>
     <module>type-api</module>
   </modules>
