SAK-18627 Adjust poms for build and deployment (profile help)
git-svn-id: https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x@81364 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>profile-assembly</module>
         <module>profile-component</module>
         <module>profile-component-shared</module>
+        <module>profile-help</module>
     </modules>
 
     <pluginRepositories>
