--- a/profile-assembly/pom.xml
+++ b/profile-assembly/pom.xml
@@ -41,6 +41,12 @@
             <type>war</type>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>profile-help</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
