--- a/profile-help/pom.xml
+++ b/profile-help/pom.xml
@@ -2,14 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>profile-base</artifactId>
-    <groupId>org.sakaiproject</groupId>
-    <version>2.6-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <groupId>org.sakaiproject.profile</groupId>
+    <artifactId>profile</artifactId>
+    <version>2.7.3-SNAPSHOT</version>
   </parent>
-  <name>Sakai Profile Help</name>
-  <groupId>org.sakaiproject</groupId>
-  <artifactId>sakai-profile-help</artifactId>
+  <name>Sakai Profile Help (profile-help)</name>
+  <groupId>org.sakaiproject.profile</groupId>
+  <artifactId>profile-help</artifactId>
   <organization>
     <name>Sakai Project</name>
     <url>http://sakaiproject.org/</url>
