SAK-20959 add <properties>
git-svn-id: https://source.sakaiproject.org/svn/profile/branches/profile-2.7.x@96213 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,12 @@
         <module>profile-component-shared</module>
         <module>profile-help</module>
     </modules>
-
+    
+    <properties>
+        <sakai.jsf.version>2.7.10</sakai.jsf.version>
+        <url.localsite>scp://source.sakaiproject.org/var/www/html/release/profile/${project.version}</url.localsite>
+    </properties>
+    
     <pluginRepositories>
         <pluginRepository>
             <id>maven2-central-repo</id>
@@ -106,7 +111,7 @@
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
-                <version>2.7.7</version>
+                <version>${sakai.jsf.version}</version>
                 <type>pom</type>
             </dependency>
             <dependency>
