--- a/profile-help/pom.xml
+++ b/profile-help/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sakaiproject.profile</groupId>
     <artifactId>profile</artifactId>
-    <version>2.7.6</version>
+    <version>2.7.7-SNAPSHOT</version>
   </parent>
   <name>Sakai Profile Help (profile-help)</name>
   <groupId>org.sakaiproject.profile</groupId>
