SAK-23388 Remove profile 1 tool from the deployment/build
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@121778 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
 
     <modules>
         <module>profile-api</module>
-        <module>profile-app</module>
-        <module>profile-help</module>
-        <module>profile-assembly</module>
+        <!--module>profile-app</module-->
+        <!--module>profile-help</module-->
+        <!--module>profile-assembly</module-->
         <module>profile-component</module>
         <module>profile-component-shared</module>
     </modules>
